# uselessgoddess-quasar

./: .gitignore  .gitkeep  Cargo.toml  README.md  cubecl.toml  pyproject.toml  tmp.md
.github/workflows/: ci.yml
docs/: DESIGN.md  KERNELS.md  MEMORY.md  TRAINING_SPEED.md  TRITON.md
examples/: README.md  install-triton-rocm.sh  smoke.sh  state_passing_ab.sh  train_bench.rs
examples/common/model/: mod.rs
examples/fibonacci/: training.rs
examples/grokking/: dataset.rs  diagnostics.rs  main.rs  training.rs
examples/mnist-class/: training.rs
experiments/: rx9070xt.txt
experiments/default-streams/: cubecl.toml
experiments/profile/: cubecl.toml
experiments/single-stream/: cubecl.toml
quasar_triton/: __init__.py  cli.py  config.py  data.py  model.py  schedule.py  train.py
src/: config.rs  data.rs  eval.rs  generate.rs  kernel.rs  lib.rs  main.rs  model.rs  train.rs
src/data/: batch.rs  corpus.rs  prepare.rs  shard.rs  tokenizer.rs
src/mamba2/: mamba2.rs
src/mamba2/ssd/: mod.rs
src/mamba2/ssd/serial_recalculated/: serial_recalculated.rs
src/mamba2/ssd/serial_recalculated/combined_backward/: tests.rs
src/mamba3/: mamba3.rs
src/mamba3/double_ssd/ssd/: serial.rs
src/mamba3/double_ssd/ssd/serial_recalculated/: serial_recalculated.rs
src/mamba3/moments/: backward.rs  recalculated.rs  tests.rs
src/mamba3/quat_scan/: quat_scan.rs
src/mamba3/single_ssd/single_ssd/: mod.rs
src/mamba3/single_ssd/ssd/: serial.rs
src/mamba3/single_ssd/ssd/ssd_path/: tests.rs
src/mamba3/single_ssd_scan/: backward.rs  fusion.rs
src/mamba3/state_passing/: fusion.rs
src/model/: attention.rs  block.rs  ffn.rs  init.rs  lm.rs
src/modules/: network.rs
src/modules/loss/: bce.rs  cross_entropy.rs
src/modules/network/: tests.rs
src/modules/norm/: rms_norm_gated.rs
src/modules/norm/rms_norm/: tests.rs
src/train/: checkpoint.rs  optim.rs  run.rs  schedule.rs  ui.rs
tests/: __init__.py  cubecl_cpu.rs  test_triton_cli.py  test_triton_config.py  test_triton_data.py  test_triton_model_contract.py  test_triton_schedule.py
