[package]
name = "quasar"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
description = "A Mamba-3 language model family and training harness for a single consumer GPU"
license = "MIT OR Apache-2.0"
repository = "https://github.com/uselessgoddess/quasar"

[dependencies]
# burn's `main` (0.22-pre) rather than 0.21, pinned to the revision burn-mamba
# builds against: the dispatch rewrite dropped the `B: Backend` type parameter
# from `Tensor`, so the two APIs cannot be mixed inside one module tree. The
# revision is the dependency's, not a choice -- moving it means moving both.
burn = { git = "https://github.com/tracel-ai/burn.git", rev = "d028234e2ccd75c5ca57d1c71ae74456e0e15c4f", default-features = false, features = [
    "std",
    "autodiff",
    "dataset",
    "optim",
    "extension",
    "store",
    "train",
    "tui",
] }
# The Mamba-3 SSD kernels: trapezoidal discretisation, data-dependent RoPE and
# MIMO, with a memory-efficient custom backward. Reimplementing them would be
# ~4k lines of tensor code whose correctness nothing here would check.
burn-mamba = { git = "https://github.com/swfsql/burn-mamba.git", rev = "34b1e8d04794b5ac5f263a116990e421716193b6", default-features = false, features = [
    "mamba3",
    "autodiff",
] }
# Named directly only to switch on `burnpack`, which burn's own `store` feature
# leaves off. Burnpack is the one format that preserves `ParamId`s, and without
# them a reloaded model no longer matches its saved optimizer state.
burn-store = { git = "https://github.com/tracel-ai/burn.git", rev = "d028234e2ccd75c5ca57d1c71ae74456e0e15c4f", default-features = false, features = [
    "std",
    "burnpack",
] }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.23", default-features = false, features = ["onig", "progressbar"] }
memmap2 = "0.9"
# Every modern corpus on the Hub ships as parquet, and the harness is supposed
# to take what the user downloaded. `default-features = false` drops arrow: the
# row API reads a single string column without it.
parquet = { version = "56", default-features = false, features = ["snap", "zstd", "brotli", "lz4"] }
rand = "0.9"
rand_chacha = "0.9"
rayon = "1"
indicatif = "0.17"

[dev-dependencies]
approx = "0.5"
tempfile = "3"

[features]
# CPU by default so `cargo test` needs no GPU. Flex is burn's own CPU backend on
# `main`; ndarray is kept as an escape hatch for machines where Flex misbehaves.
#
# Every backend has to be named twice: burn-mamba dispatches its custom SSD
# backward through a per-backend extension trait, and a backend it was not
# compiled for panics with "Backend not supported for custom op" at the first
# forward rather than failing to link.
default = ["flex"]
flex = ["burn/flex", "burn-mamba/backend-flex"]
ndarray = ["burn/ndarray", "burn-mamba/backend-ndarray"]
# wgpu is the primary training backend on RDNA4: `vulkan` is the same CubeCL
# runtime compiled to SPIR-V instead of WGSL, which AMD drivers do better on.
#
# `burn-mamba/fusion` goes with `burn/fusion` and is not optional: every GPU
# backend of burn's is a `Fusion<CubeBackend<_>>`, and burn-mamba implements its
# extension trait for `Fusion` only under that feature. Without it the extension
# is missing for the very backend that was asked for, which is a compile error
# inside burn-mamba rather than anything readable.
gpu = ["burn/autotune", "burn/fusion", "burn-mamba/fusion"]
wgpu = ["gpu", "burn/wgpu", "burn-mamba/backend-wgpu"]
# The real CubeCL CPU runtime (`Fusion<CubeBackend<CpuRuntime>>`, LLVM-JIT via
# cubecl-cpu), as opposed to `flex`, which is a pure-Rust backend that never
# compiles a `#[cube]` kernel. This is the only way to compile *and run* a
# hand-written CubeCL kernel -- forward and backward -- on a CPU-only CI runner,
# so it is what the `kernel` job uses to check the fused RMSNorm against its
# tensor-op reference. Off by default because it pulls in LLVM.
cpu = ["gpu", "burn/cpu", "burn-mamba/backend-cpu"]
vulkan = ["gpu", "burn/vulkan", "burn-mamba/backend-vulkan"]
rocm = ["gpu", "burn/rocm", "burn-mamba/backend-rocm"]
cuda = ["gpu", "burn/cuda", "burn-mamba/backend-cuda"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# The tests run real forward/backward passes; unoptimised CPU tensor code makes
# the suite take minutes instead of seconds.
[profile.test]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3
