[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "quasar-triton"
version = "0.1.0"
description = "Upstream Triton Mamba-3 training path for Quasar"
requires-python = ">=3.12,<3.13"
dependencies = [
  "einops>=0.8",
  "ninja>=1.11",
  "packaging>=24",
  "torch>=2.9",
  "transformers>=4.56",
]

[project.scripts]
quasar-triton = "quasar_triton.cli:main"

[tool.setuptools.packages.find]
include = ["quasar_triton*"]

[tool.ruff]
indent-width = 2
line-length = 100
target-version = "py312"
